Migrate from libgnome-keyring to libsecret

https://bugzilla.gnome.org/show_bug.cgi?id=679855